--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -328,6 +328,12 @@ a.sidebar-nav-item:focus {
   color: #9a9a9a;
 }
 
+.inline-post-date {
+  margin-top: -.5rem;
+  margin-bottom: 1rem;
+  color: #9a9a9a;
+}
+
 /* Related posts */
 .related {
   padding-top: 2rem;
