--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -25,8 +25,7 @@
       {% endif %}
     {% endfor %}
 
-    <a class="sidebar-nav-item" href="shuhari.io">Shuhari</a>
-    <a class="sidebar-nav-item" href="bandpss.fm">Bandpass</a>
+    <a class="sidebar-nav-item" href="http://shuhari.io">Shuhari</a>
   </nav>
 
   <div class="sidebar-item">
