--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -5,6 +5,9 @@
 <!-- Toggleable sidebar -->
 <div class="sidebar" id="sidebar">
   <div class="sidebar-item">
+    <img src="/assets/joseph.png">
+  </div>
+  <div class="sidebar-item">
     <p>{{ site.description }}</p>
   </div>
 
