make it circular and correct size

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -5,7 +5,7 @@
 <!-- Toggleable sidebar -->
 <div class="sidebar" id="sidebar">
   <div class="sidebar-item">
-    <img src="/assets/joseph.png">
+    <img src="/assets/joseph.png" class="img-circle" height="140" width="140">
   </div>
   <div class="sidebar-item">
     <p>{{ site.description }}</p>
