--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -164,6 +164,11 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: normal;
   color: #fff;
 }
+.sidebar img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto
+}
 .sidebar-item {
   padding: 1rem;
 }
