--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,11 @@ layout: default
 ---
 
 <div class="post">
+  {% if page.image %}
+    <div class="img-crop">      
+      <img src="{{ site.baseurl }}/assets/{{ page.image }}">
+    </div>
+  {% endif %}
   <h1 class="post-title">{{ page.title }}</h1>
   <span class="post-date">{{ page.date | date_to_string }}</span>
   {{ content }}
